# outdoor_social_robot

./: .gitignore
bringup_devices/bno055_serial_imu/: package.xml  setup.cfg  setup.py
bringup_devices/bno055_serial_imu/arduino/imu_arduino/: imu_arduino.ino
bringup_devices/bno055_serial_imu/bno055_serial_imu/: serial_imu_node.py
bringup_devices/bno055_serial_imu/launch/: bno055_serial_imu.launch.py
bringup_devices/lidar_camera_calibration/: README.md  package.xml  setup.py
bringup_devices/lidar_camera_calibration/boards/: generate_charuco_board.py
bringup_devices/lidar_camera_calibration/config/: calibration.yaml
bringup_devices/lidar_camera_calibration/launch/: collect.launch.py  publish_transform.launch.py  validate.launch.py
bringup_devices/lidar_camera_calibration/lidar_camera_calibration/: collect_samples_node.py  estimate_transform.py  validate_projection_node.py
bringup_devices/lidar_camera_calibration/results/: lidar_to_camera.yaml
bringup_devices/sparkfun_rtk_gps_bringup/: package.xml  setup.cfg  setup.py
bringup_devices/sparkfun_rtk_gps_bringup/config/: ntrip_credentials.yaml
bringup_devices/sparkfun_rtk_gps_bringup/launch/: gps_only.launch.py  gps_rtk.launch.py
bringup_devices/sparkfun_rtk_gps_bringup/sparkfun_rtk_gps_bringup/: navsat_to_nmea_node.py
bringup_devices/velodyne_vlp32c_bringup/: package.xml  setup.cfg  setup.py
bringup_devices/velodyne_vlp32c_bringup/config/: velodyne_transform_override.yaml
bringup_devices/velodyne_vlp32c_bringup/launch/: vlp32c.launch.py  vlp32c_calibration.launch.py  vlp32c_outdoor.launch.py
bringup_devices/xsens_mti_imu_bringup/: README.md  package.xml  setup.cfg  setup.py
bringup_devices/xsens_mti_imu_bringup/config/: xsens_m320.yaml
bringup_devices/xsens_mti_imu_bringup/launch/: xsens_mti_imu_bringup.launch.py
debugging/gps_pose_visualizer/: package.xml  setup.cfg  setup.py
debugging/gps_pose_visualizer/gps_pose_visualizer/: gps_info_node.py
debugging/gps_pose_visualizer/launch/: visualize.launch.py
debugging/gps_pose_visualizer/rviz/: outdoor_robot.rviz
debugging/osm_gps_visualizer/: package.xml  setup.cfg  setup.py
debugging/osm_gps_visualizer/launch/: osm_visualize.launch.py
debugging/osm_gps_visualizer/osm_gps_visualizer/: osm_node.py
localization/amcl_2d_localization/: localization_2d.md  package.xml  setup.cfg  setup.py
localization/amcl_2d_localization/config/: amcl.yaml  slam_toolbox.yaml
localization/amcl_2d_localization/launch/: amcl_localization.launch.py  mapping.launch.py
localization/amcl_2d_localization/map/: map.yaml
localization/fast_lio_robot_bringup/: package.xml  setup.cfg  setup.py
localization/fast_lio_robot_bringup/config/: fast_lio_velodyne32.yaml
localization/fast_lio_robot_bringup/launch/: fast_lio_robot.launch.py
localization/lio_sam_robot_bringup/: package.xml  setup.cfg  setup.py
localization/lio_sam_robot_bringup/config/: lio_sam_velodyne32.yaml
localization/lio_sam_robot_bringup/launch/: lio_sam_robot.launch.py
perception/pedestrian_detection/: package.xml  setup.cfg  setup.py
perception/pedestrian_detection/config/: detection.yaml
perception/pedestrian_detection/launch/: detect.launch.py  detect_jetson.launch.py
perception/pedestrian_detection/pedestrian_detection/: pedestrian_detector_node.py
perception/semantic_bev/: package.xml  setup.cfg  setup.py
perception/semantic_bev/config/: semantic_bev.yaml
perception/semantic_bev/launch/: semantic_bev.launch.py
perception/semantic_bev/rviz/: semantic_bev.rviz
perception/semantic_bev/semantic_bev/: bev_grid.py  semantic_bev_node.py  semantic_classes.py
perception/semantic_segmentation/: package.xml  setup.py
perception/semantic_segmentation/config/: jetson_orin.yaml  rtx_desktop.yaml
perception/semantic_segmentation/launch/: segmentation.launch.py
perception/semantic_segmentation/semantic_segmentation/: export_tensorrt.py  segformer_inferencer.py  segmentation_node.py  yolo_inferencer.py
robot_motion/: motion_robot.md
robot_motion/base_navigation/: CMakeLists.txt  package.xml
robot_motion/base_navigation/action/: GoToXYPhi.action
robot_motion/base_navigation/config/: controller_server.yaml  global_costmap.yaml  local_costmap.yaml  nav2_params.yaml  planner_server.yaml
robot_motion/base_navigation/launch/: nav2_navigation.launch.py
robot_motion/base_navigation/src/: navigate_to_pose_server.cpp
robot_motion/robot_move/: CMakeLists.txt  package.xml
robot_motion/robot_move/include/robot_move/: robot_move.hpp
robot_motion/robot_move/src/: robot_move.cpp
