<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sparkfun_rtk_gps_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for SparkFun ZED-F9P RTK GPS with SAPOS BW NTRIP corrections</description>
  <maintainer email="andy.flores@pucp.edu.pe">Andy Flores</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ublox_gps</depend>
  <depend>ntrip_client</depend>
  <depend>sensor_msgs</depend>
  <depend>nmea_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
