<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osm_gps_visualizer</name>
  <version>0.0.0</version>
  <description>Live GPS tracker on OpenStreetMap via a Flask web server</description>
  <maintainer email="andy.flores@pucp.edu.pe">Andy Flores</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
