<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_bev</name>
  <version>0.1.0</version>
  <description>
    Local semantic Bird's Eye View map fusing LiDAR geometry, FAST-LIO odometry,
    and RGB-D camera segmentation (YOLO) for outdoor sidewalk/crossing navigation.
  </description>
  <maintainer email="andy.flores@pucp.edu.pe">cas</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS runtime dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Message types -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python libraries (provided by rosdep / pip) -->
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
