<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_segmentation</name>
  <version>0.1.0</version>
  <description>
    Semantic segmentation inference node.
    Runs YOLOv8-seg (objects) + SegFormer (surfaces) and publishes a merged
    class-ID mask consumed by semantic_bev_node.
    Supports RTX desktop (FP32/FP16) and Jetson Orin (FP16 + TensorRT).
  </description>
  <maintainer email="andy.flores@pucp.edu.pe">cas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <!-- ultralytics and transformers installed via pip — see README -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
