<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_move</name>
  <version>0.0.0</version>
  <description>Library providing blocking move_base(x,y,phi) and move_arm(motion_name) using action clients for go_to_xy_phi and play_motion2.</description>
  <maintainer email="andy.flores@pucp.edu.pe">cas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>base_navigation</depend>
  <depend>play_motion2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
